Fix display issues on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ html {
 }
 
 input {
-	width: 95%;
+	width: 90%;
 	margin: auto;
 }
 
